--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -4,7 +4,7 @@
     <div class = "my-4">
       <span class ="rounded bg-light py-2 px-3 font-weight-bold">注文履歴一覧</span>
     </div>
-    <% if @order.present? %>
+    <% if @orders.present? %>
     <table class ="table table-hover">
       <thread>
         <tr class="bg-light">
@@ -17,41 +17,17 @@
       <% @orders.each do |order| %>
       <tbody>
         <tr>
-          <%= link_to "#{order.created_at}", order_path(order.id) %>
-          <td>2022/12/12</td>
-          <%= order.customer.customer_name %>
-          <td>石倉基之</td>
-          <%= order.order_item.quantity %>
+          <td><%= link_to "#{order.created_at.strftime('%Y年%m月%d日 %H時%M分')}", admin_order_path(order.id) %></td>
+          <td><%= order.customer.customer_name %></td>
+          <%#= order.quantity %>
           <td>2</td>
-          <%= order.status %>
-          <td>入金待ち</td>
+          <td><%= order.status_i18n %></td>
         </tr>
       </tbody>
       <% end %>
     </table>
       <%= paginate @orders %>
     <% else %>
-  </div>
-  <div class= "row">注文がありません（下記表示例）
-  <%= render 'order_search', orders: @orders %>
-  </div>
-      <table class ="table table-hover">
-      <thread>
-        <tr class="bg-light">
-          <th scope="col">購入日時</th>
-          <th scope="col">購入者</th>
-          <th scope="col">注文個数</th>
-          <th scope="col">注文ステータス</th>
-        </tr>
-      </thread>
-      <tbody>
-        <tr>
-          <td><%= link_to "2022/12/12", admin_order_path(1) %></td>
-          <td>石倉基之</td>
-          <td>2</td>
-          <td>入金待ち</td>
-        </tr>
-      </tbody>
-    </table>
+    <div>注文がありません</div>
     <% end %>
 </div>
