--- a/app/views/admin/orders/_order.html.erb
+++ b/app/views/admin/orders/_order.html.erb
@@ -1,9 +1,36 @@
-<% if @order.present? %>
-  <table class="table table-borderless">
-      <tbody>
-          <th>購入者</th>
-          <td></td>
-      </tbody>
+<% if order.present? %>
+  <table class="col-8 table table-bordered table-sm">
+    <tbody>
+      <tr>
+        <th class ="col-2 table-active">購入者</th>
+        <td class ="col-7"><%= order.customer.customer_name %></td>
+      </tr>
+      <tr>
+        <th class ="table-active">注文日</th>
+        <td><%= order.created_at %></td>
+      </tr>
+      <tr>
+        <th class ="table-active">配送先</th>
+        <td><%= order.address %></td>
+      </tr>
+      <tr>
+        <th class="table-active">氏名</th>
+        <td><%= order.address_name %></td>
+      </tr>
+      <tr>
+        <th class="table-active">支払い方法</th>
+        <td><%= order.payment_method_i18n %></td>
+      </tr>
+      <tr>
+        <th class="table-active">注文ステータス</th>
+        <td>
+          <%= form_with model: [:admin, order] do |f| %>
+            <%= f.select :status,[["入金待ち","waiting_payment"],["入金確認","payment_confirm"],["製作中","making"],["発送準備中","preparing_delivery"],["発送済み","delivered"]]  %>
+            <%= f.submit '更新', class:"btn btn-success" %>
+          <% end %>
+          </td>
+      </tr>
+    </tbody>
   </table>
 <% else %>
   <p class="col-12">注文情報がありません</p>
