--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,63 +1,62 @@
-<h2></h2>
-
-<div class="container-fluid">
-<div class="row">
-  <div class="col-xs-12">
-  <h2 class="head-line title_h2 text-center">注文情報入力</h2>
+<div class="col-2 offset-2 my-5 bg-light text-black text-center">
+  <h2>注文情報入力</h2>
+  </div>
    <% if current_customer.cart_items.present? %>
-  <div class="col-xs-offset-1">
-      <%= form_with :model => @order,url:log_orders_path,method: :post, local: true  do |f| %>
-        <h3 class="col-xs-5 sub-head text-center">支払い方法</h3>
-          <div class="col-xs-10 radio text-center">
-            <%= f.radio_button :payment_method, "credit_card", checked: true %>
-            <span><%= f.label :payment_method_credit_card, "クレジットカード" %></span>
-          </div>
-          <div class="col-xs-10 radio text-center">
-            <%= f.radio_button :payment_method, :"transfer" %>
-            <span><%= f.label :payment_method_transfer, "銀行振込" %></span>
-          </div>
-           
 
-        <h3 class="col-xs-5 sub-head text-center">お届け先</h3>
-          <div class="col-xs-10 radio text-center">
+  <div class="container">
+      
+      <%= form_with :model => @order,url:log_orders_path,method: :post, local: true  do |f| %>
+      
+      <div class="form-group field">
+        <h4 class="col-sm-2 text-center"><strong>支払い方法</strong></h4>
+      
+            <%= f.radio_button :payment_method, "credit_card", checked: true %>
+            <span><%= f.label :payment_method_credit_card, "クレジットカード" , class: "col-sm-6 control-label"%></span><br>
+          
+          
+            <%= f.radio_button :payment_method, :"transfer" %>
+            <span><%= f.label :payment_method_transfer, "銀行振込", class: "col-sm-6 control-label" %></span>
+          
+         
+       
+        <h4 class="col-sm-2 text-center"><strong>お届け先</strong></h4>
+          
            <%= f.radio_button :address_number, 1 %>
             <span>&nbsp;<%= f.label :address_number_1, "ご自身の住所" %></span><br>
-             &emsp;&emsp;<%= " #{current_customer.postal_code} #{current_customer.address}" %>
+            <div class= "col-sm-6 control-label">
+             &emsp;&emsp;<%= " 〒#{current_customer.postal_code}　#{current_customer.address}" %>
             <br>
-            &emsp;&emsp;<%= "#{current_customer.last_name} #{current_customer.first_name}" %>
-          </div>
-
-          
-          <div class="col-xs-10 radio text-center">
+            &emsp;&emsp;<%= "#{current_customer.last_name} #{current_customer.first_name}" %><br>
+             </div>
+            
            <%= f.radio_button :address_number, 2 %>
-              <span>&nbsp; <%= f.label :address_number_2, "登録先の住所" %></span><br>
-               &emsp;&emsp;<%= f.collection_select(:shipping_address_id, current_customer.shipping_addresses.all, :id,:address, include_blank: "選択して下さい") %>
-          </div>
-         
-
-          <div class="new-address col-xs-10 radio text-center">
+              <span>&nbsp; <%= f.label :address_number_2, "登録先の住所から選択" %></span><br>
+              <div class= "col-sm-10 control-label">
+               &emsp;&emsp;&emsp;&emsp;<%= f.collection_select(:shipping_address_id, current_customer.shipping_addresses.all, :id,:full_address, include_blank: "選択して下さい") %><br>
+              </div>
            <%= f.radio_button :address_number, 3 %>
             <span>&nbsp; <%= f.label :address_number_3, "新しいお届け先" %></span><br>
-            <div class="field form-group col-xs-11">
-              <%= f.label :"郵便番号" %>
-              <%= f.text_field :postal_code %>
-            </div>
-            <div class="field form-group col-xs-11">
-              <%= f.label :"住所" %>
-              <%= f.text_field :address %>
-            </div>
-            <div class="field form-group col-xs-11">
-              <%= f.label :"宛名" %>
-              <%= f.text_field :address_name %>
-            </div>
-          </div>
+           
+              <%= f.label :"郵便番号（ハイフンなし)", class: "col-sm-3 control-label"%>
+              <%= f.text_field :postal_code, class: "col-sm-4 form-control-static" %><br>
+            
+          
+              <%= f.label :"住所" , class: "col-sm-3 control-label"%>
+              <%= f.text_field :address , class: "col-sm-8 form-control-static"%><br>
+            
+            
+              <%= f.label :"宛名" , class: "col-sm-3 control-label"%>
+              <%= f.text_field :address_name , class: "col-sm-4 form-control-static"%>
+           
 
-          <div class="btns col-xs-8 text-center">
-            <%= link_to cart_items_path, class: "glyphicon glyphicon-shopping-cart btn btn-info col-xs-3 cart-back" do %>
+          <div class="btns col-sm-9 text-center">
+            <%= link_to cart_items_path, class: "glyphicon glyphicon-shopping-cart btn btn-info cart-back" do %>
              カート(<%= current_customer.cart_items.count %>)へ戻る<% end %>
             
             <%= f.submit "確認画面へ進む",class: "glyphicon glyphicon-zoom-in btn btn-success"%>
-           
+            </div>
+          </div>
+          </div>
           </div>
           <% end %>
     </div>
