--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -13,7 +13,7 @@
               </tr>
               <tr>
               　<th class="info">配送先</th>
-                <td class="text-left"><%= @order.postal_code %><br>
+                <td class="text-left">〒<%= @order.postal_code %><br>
                 	  <%= @order.address %><br>
                 	  <%= @order.address_name %>
                 </td>
