--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -19,8 +19,7 @@
         <tr>
           <td><%= link_to "#{order.created_at.strftime('%Y年%m月%d日 %H時%M分')}", admin_order_path(order.id) %></td>
           <td><%= order.customer.customer_name %></td>
-          <%#= order.quantity %>
-          <td>2</td>
+          <td><%= order.order_items.where(order_id: order.id).sum(:quantity) %></td>
           <td><%= order.status_i18n %></td>
         </tr>
       </tbody>
