税抜・税込表示の訂正

--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -29,7 +29,7 @@
             <td><%= @item.genre.name %></td>
           </tr>
           <tr>
-            <td>税込価格(税抜価格)</td>
+            <td>税抜価格(税込価格)</td>
             <td><%= @item.non_taxed_price %>(<%= @item.with_tax_price %>)円</td>
           </tr>
           <tr>
