--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -3,6 +3,11 @@
     <span class="rounded bg-light py-2 px-3 font-weight-bold">会員一覧</span>
   </div>
   <div class="row">
+    <div class="offset-2 col-4 ml-auto">
+      <%= render 'customer_search', customers: @customers %>
+    </div>
+  </div>
+  <div class="row">
     <table class="table table-hover">
       <thread>
         <tr class="bg-light">
@@ -16,7 +21,7 @@
       <tbody>
         <tr>
           <td><%= customer.id %></td>
-          <td><%= link_to "#{customer.last_name+customer.first_name}", admin_customer_path(customer.id) %></td>
+          <td><%= link_to "#{customer.customer_name}", admin_customer_path(customer.id) %></td>
           <td><%= customer.email %></td>
           <td>
             <% if customer.is_deleted == true %>
