--- a/app/views/admin/homes/_order_search.html.erb
+++ b/app/views/admin/homes/_order_search.html.erb
@@ -1,7 +1,10 @@
- <span>  
-    <%= form_with model:orders, url: admin_order_search_path, local: true, method: :get do |f| %>
-      <%#= f.select :order_status, options_from_collection_for_select(Order.all, :id, :status) %>
-      <%= f.select :order_status, options_for_select([["全て",''],["入金待ち", 0],["入金確認", 1],["製作中", 2],["発送準備中", 3],["発送済み", 4]]) %>
-      <%= f.submit "絞り込み" %>
-    <% end %>
- </span>
+<%= form_with url: admin_order_search_path, local: true, method: :get do |f| %>
+  <div class="form-row mt-3">
+    <div class="form-group col-8">
+      <%= f.select :order_status, options_for_select([["全て",''],["入金待ち", "waiting_payment"],["入金確認", "payment_confirm"],["製作中", "making"],["発送準備中", "preparing_delivery"],["発送済み", "delivered"]]),{},class:"form-control" %>
+    </div>
+    <div class="form-group col-4 text-center">
+      <%= f.submit "絞り込み",class:"btn btn-success" %>
+    </div>
+  </div>
+<% end %>
