--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,9 +1,14 @@
 <div class ="container">
 
   <div class = "row">
-    <div class = "my-4">
+    <div class = "col-6 my-4">
       <span class ="rounded bg-light py-2 px-3 font-weight-bold">注文履歴一覧</span>
     </div>
+    <div class="offset-2 col-4 ml-auto">
+      <%= render 'order_search', orders: @orders %>
+    </div>
+  </div>  
+  <div class = "row">
     <% if @orders.present? %>
     <table class ="table table-hover">
       <thread>
@@ -27,6 +32,7 @@
     </table>
       <%= paginate @orders %>
     <% else %>
-    <div>注文がありません</div>
+    </div>
+    <span class="bg-warning p-3"> 注文がありません</span>
     <% end %>
 </div>
