--- a/app/views/admin/orders/_order.html.erb
+++ b/app/views/admin/orders/_order.html.erb
@@ -26,7 +26,7 @@
         <td>
           <%= form_with model: [:admin, order] do |f| %>
             <%= f.select :status,[["入金待ち","waiting_payment"],["入金確認","payment_confirm"],["製作中","making"],["発送準備中","preparing_delivery"],["発送済み","delivered"]]  %>
-            <%= f.submit '更新', class:"btn btn-success" %>
+            <%= f.submit '更新', class:"btn btn-success btn-sm" %>
           <% end %>
           </td>
       </tr>
@@ -34,39 +34,5 @@
   </table>
 <% else %>
   <p class="col-12">注文情報がありません</p>
-  <table class="col-8 table table-bordered table-sm">
-    <tbody>
-      <tr>
-        <th class ="col-2 table-active">購入者</th>
-        <td class ="col-7">山田花子<%#= link_to "#{order.customer.customer_name}",admin_customer_orders_path(@order.customer_id) %></td>
-      </tr>
-      <tr>
-        <th class ="table-active">注文日</th>
-        <td>2023/1/10<%#= @order.created_at %></td>
-      </tr>
-      <tr>
-        <th class ="table-active">配送先</th>
-        <td>東京都渋谷区神南1丁目<%#= @order.address %></td>
-      </tr>
-      <tr>
-        <th class="table-active">氏名</th>
-        <td>山田花子<%#= @order.address_name %></td>
-      </tr>
-      <tr>
-        <th class="table-active">支払い方法</th>
-        <td>銀行振込<%#= @order.payment_method %></td>
-      </tr>
-      <tr>
-        <th class="table-active">注文ステータス</th>
-        <td>
-          入金待ち
-          <%#= form_with model: [:admin, @order] do |f| %>
-            <%#= @order.payment_method %>
-            <%#= f.select :status, options_from_collection_for_select(Order.all, :id, :status) %>
-            <%#= f.submit '更新', class:"btn btn-success" %>
-          <%# end %>
-          </td>
-      </tr>
-    </tbody>
-  </table>
+
 <% end %>
