--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <div class="row my-3">
-    <span class="rounded bg-light py-2 px-3 font-weight-bold">会員一覧</span>
-  </div>
-  <div class="row">
+  <div class="row mt-3">
+    <div class = "col-6 my-4">
+      <span class="rounded bg-light py-2 px-3 font-weight-bold">会員一覧</span>
+    </div>
     <div class="offset-2 col-4 ml-auto">
       <%= render 'customer_search', customers: @customers %>
     </div>
