--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,6 +1,5 @@
 <div class ="container">
-
-  <div class = "row">
+  <div class = "row mt-3">
     <div class = "col-6 my-4">
       <span class ="rounded bg-light py-2 px-3 font-weight-bold">注文履歴一覧</span>
     </div>
