--- a/app/views/admin/orders/_order.html.erb
+++ b/app/views/admin/orders/_order.html.erb
@@ -7,7 +7,7 @@
       </tr>
       <tr>
         <th class ="table-active">注文日</th>
-        <td><%= order.created_at %></td>
+        <td><%= order.created_at.strftime('%Y年%m月%d日 %H時%M分') %></td>
       </tr>
       <tr>
         <th class ="table-active">配送先</th>
