--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -20,7 +20,7 @@
       <tr>
         <td><%= order.created_at.strftime('%Y/%m/%d') %></td>
     		<td class="text-left">
-    		  <%= order.postal_code %><br>
+    		  〒<%= order.postal_code %><br>
     		  <%= order.address %><br>
     		  <%= order.address_name %>
     		</td>
