--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,78 +1,87 @@
-<h1>注文履歴詳細</h1>
+<div class="container-fluid">
+<div class="col-2 offset-1 my-5 bg-light text-black text-center">
+<h4>注文履歴詳細</h4></div>
 
-<h2 class="head-line title_h2 text-center">注文履歴詳細</h2>
 <div calss="row">
+   <div class="col-md-5">
   <% if @order.present? %>
-    <div class="col-xs-8">
-    <strong><i class="far fa-user"></i>注文情報</strong>
-  	<table>
+  	 <table class="table table-bordered ">
+  	    <strong><i class="far fa-user"></i>注文情報</strong>
           <tbody>
-              <tr>
-                <th class="info">注文日</th>
+              <tr >
+                <th class="table-secondary">注文日</th>
           	  <td class="text-left"><%= @order.created_at.strftime('%Y/%m/%d') %></td>
               </tr>
-              <tr>
-              　<th class="info">配送先</th>
+              <tr >
+              　<th class="table-secondary">配送先</th>
                 <td class="text-left">〒<%= @order.postal_code %><br>
                 	  <%= @order.address %><br>
                 	  <%= @order.address_name %>
                 </td>
               </tr>
-              <tr>
-              　<th class="info">支払方法</th>
+              <tr >
+              　<th class="table-secondary">支払方法</th>
                 <td class="text-left"><%= @order.payment_method_i18n %></td>
               </tr>
               <tr>
-                <th class="info">ステータス</th>
+                <th class="table-secondary">ステータス</th>
                 <td class="text-left"><%= @order.status_i18n %></td>
               </tr>
           </tbody>
         </table>
     </div>
-    <div class="col-xs-3 col-xs-offset-1 billing">
+    
+   <div class="col-md-3">
       <strong><i class="fas fa-yen-sign"></i>請求情報</strong>
-        	<table class="table table-bordered table-condensed">
+        <table class="table table-bordered ">
             <tr>
-              <th class="info">商品合計</th>
-              <td class="text-right col-xs-5"><%=(@order.billing_amount - 800)%>円</td>
+              <th class="table-secondary">商品合計</th>
+              <td class="text-left col-md-5"><%=(@order.billing_amount - 800)%>円</td>
             </tr>
             <tr>
-              <th class="info">配送料</th>
-              <td class="text-right col-xs-5">800円</td>
+              <th class="table-secondary">配送料</th>
+              <td class="text-left col-md-5">800円</td>
             </tr>
             <tr>
-              <th class="info">ご請求金額</th>
-              <td class="text-right col-xs-5"><%= @order.billing_amount %>円</td>
+              <th class="table-secondary"><strong>ご請求金額</strong></th>
+              <td class="text-left col-md-5"><%= @order.billing_amount %>円</td>
             </tr>
         </table>
+        </div>
     </div>
-    <div class="col-xs-7 order-details">
+    
+    <div calss="row">
+    <div class="col-md-6 order-details">
     	<strong><i class="fas fa-store"></i>注文内容</strong>
-        <table class="table table-striped table-bordered table-condensed">
+         <table class="table table-bordered mx-5 w-auto">
         	<thead>
-        	 
-  	      <tr class="info">
-  	      	<th>商品</th>
-  	        <th>単価(税込)</th>
-  	      	<th>個数</th>
-  	      	<th>小計</th>
+  	      <tr class="table-secondary">
+  	      	 <th scope="col" style="width: 40%">商品</th>
+  	         <th scope="col" style="width: 10%">単価(税込)</th>
+  	      	 <th scope="col" style="width: 10%">個数</th>
+  	       <th scope="col" style="width: 10%">小計</th>
   	      </tr>
         	</thead>
         
         	<% @order_items.each do |order_it| %>
         	<tr>
-  	        <td><%= order_it.item.name%></td>
-  	        <td class="text-right"><%= order_it.item.with_tax_price %>円</td>
-  	        <td class="text-right"><%= order_it.quantity %></td>
-  	        
-  	        <td class="text-right"><%= (order_it.item.with_tax_price)*(order_it.quantity.to_i) %>円</td>
+  	        <td scope="col" style="width: 40%"><%= order_it.item.name%></td>
+  	        <td scope="col" style="width: 10%"><%= order_it.item.with_tax_price %>円</td>
+  	        <td scope="col" style="width: 10%"><%= order_it.quantity %></td>
+  	        <td scope="col" style="width: 10%"><%= (order_it.item.with_tax_price)*(order_it.quantity.to_i) %>円</td>
   	      
             </tr>
              <% end %>
         </table>
     </div>
-      <%= link_to "注文履歴一覧へ戻る", orders_path, class: "btn btn-info btn-lg order-index-back" %>
+    </div>
+    <div calss="row">
+      <%= link_to "注文履歴一覧へ戻る", orders_path, class: "btn btn-info btn-lg order-index-back center" %>
   <% else %>
     <p>注文履歴がありません。</p>
   <% end %>
+  </div>
+
+  
+</div>
 </div>
