--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,4 +1,14 @@
 <div class="container">
+  
+  <% if @item.errors.any? %>
+    <%= @item.errors.count %>件のエラーが発生しました
+    <ul>
+      <% @item.errors.full_messages.each do |message| %>
+        <li><%= message %></li>
+      <% end %>
+    </ul>
+  <% end %>
+  
   <div class="row my-3">
     <div class="my-auto py-auto">
       <span class="rounded bg-light py-2 px-3 font-weight-bold">商品編集</span>
