--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -3,13 +3,15 @@
 <h4>注文履歴詳細</h4></div>
 
 <div calss="row">
-   <div class="col-md-5">
   <% if @order.present? %>
-  	 <table class="table table-bordered ">
+  <table class="table table-sm ">
+    <tr>
+      <td valign="top">
+  	 <table class="table table-bordered table-sm ">
   	    <strong><i class="far fa-user"></i>注文情報</strong>
           <tbody>
               <tr >
-                <th class="table-secondary">注文日</th>
+                <th class="table-secondary" style="width: 10%">注文日</th>
           	  <td class="text-left"><%= @order.created_at.strftime('%Y/%m/%d') %></td>
               </tr>
               <tr >
@@ -29,25 +31,27 @@
               </tr>
           </tbody>
         </table>
-    </div>
-    
-   <div class="col-md-3">
+        </td>
+        
+      <td valign="top">
       <strong><i class="fas fa-yen-sign"></i>請求情報</strong>
-        <table class="table table-bordered ">
+        <table class="col-4 table table-bordered table-sm">
             <tr>
               <th class="table-secondary">商品合計</th>
-              <td class="text-left col-md-5"><%=(@order.billing_amount - 800)%>円</td>
+              <td class="text-left col-5"><%=(@order.billing_amount - 800)%></td>
             </tr>
             <tr>
               <th class="table-secondary">配送料</th>
-              <td class="text-left col-md-5">800円</td>
+              <td class="text-left col-5">800</td>
             </tr>
             <tr>
               <th class="table-secondary"><strong>ご請求金額</strong></th>
-              <td class="text-left col-md-5"><%= @order.billing_amount %>円</td>
+              <td class="text-left col-5"><%= @order.billing_amount %></td>
             </tr>
         </table>
-        </div>
+         </td>
+        </tr>
+      </table>
     </div>
     
     <div calss="row">
@@ -66,9 +70,9 @@
         	<% @order_items.each do |order_it| %>
         	<tr>
   	        <td scope="col" style="width: 40%"><%= order_it.item.name%></td>
-  	        <td scope="col" style="width: 10%"><%= order_it.item.with_tax_price %>円</td>
+  	        <td scope="col" style="width: 10%"><%= order_it.item.with_tax_price %></td>
   	        <td scope="col" style="width: 10%"><%= order_it.quantity %></td>
-  	        <td scope="col" style="width: 10%"><%= (order_it.item.with_tax_price)*(order_it.quantity.to_i) %>円</td>
+  	        <td scope="col" style="width: 10%"><%= (order_it.item.with_tax_price)*(order_it.quantity.to_i) %></td>
   	      
             </tr>
              <% end %>
