--- a/app/views/public/orders/thanx.html.erb
+++ b/app/views/public/orders/thanx.html.erb
@@ -1,4 +1,3 @@
-
-<div class="row col-xs-12 center-block">
-  <h1 class="text-center ">ご購入ありがとうございました！</h1>
-</div>
+<div class="thanks-message text-center">
+   <%= image_tag "arigatou.png"%>
+  <div>
