--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,5 +1,5 @@
 
-<div class="col-2 offset-1 my-5 bg-light text-black">
+<div class="col-2 offset-2 my-5 bg-light text-black text-center">
   <h3>注文履歴一覧</h3>
 </div>
 
