--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <div class="row my-5">
-    <div class="col-2 offset-2 bg-light text-black">
+    <div class="col-2 offset-2 my-5 bg-light text-black text-center">
       <h4>ショッピングカート</h4>
     </div>
     <div class="col-6 text-right">
