管理者注文履歴ページレイアウトの調整

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
         <%= link_to about_path, class:"nav-item text-white btn btn-secondary" do %>
         <li>About</li>
         <% end %>
-        <%= link_to admin_items_path, class:"nav-item text-white btn btn-secondary" do %>
+        <%= link_to items_path, class:"nav-item text-white btn btn-secondary" do %>
           <li>商品一覧</li>
         <% end %>
         <%= link_to admin_session_path,method: :get, class:"nav-item text-white btn btn-secondary" do %>
