--- a/app/views/admin/orders/index.html.erb
+++ b/app/views/admin/orders/index.html.erb
@@ -17,7 +17,7 @@
     <% @orders.each do |order| %>
       <tbody>
         <tr>
-          <td><%= link_to "#{order.created_at}", admin_order_path(order.id) %></td>
+          <td><%= link_to "#{order.created_at.strftime('%Y年%-m月%e日 %k時%-M分')}", admin_order_path(order.id) %></td>
           <td><%= order.customer.customer_name %></td>
           <td><%= order.order_items.where(order_id: order.id).sum(:quantity) %></td>
           <td><%= order.status_i18n %></td>
