--- a/app/views/admin/searches/search_result.html.erb
+++ b/app/views/admin/searches/search_result.html.erb
@@ -1,3 +1,4 @@
+<div class="container">
 <h2 class="mt-3">検索結果</h2>
 
 <table class="table table-hover table-inverse">
@@ -71,3 +72,4 @@
   <%= paginate @items %>
 </div>
   <% end %>
+</div>
